--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,3 +1,7 @@
+<!-- inherit from templates/base.html 
+This template view listing all posts -->
+
+
 {% extends "base.html" %}
 
 {% block page_title%}
@@ -20,3 +24,7 @@
         {% endfor %}
     {% endblock posts %}
 {% endblock page_content %}
+
+{% block copyright %}
+    Copyright 2024 Christina Åhman
+{% endblock %}
