--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,34 @@
-<!-- templates/base.html -->
+<!-- templates/base.html 
+ Other templates inherit from this -->
+
+ {% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <title>Mindful Growth</title>
+
+    <!-- Custom CSS-->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
+
+    {% block page_title %}
+
 <h1>Mindful Growth</h1>
 <a href="{% url "blog_index" %}">Home</a>
 <hr>
-{% block page_title %}{% endblock page_title %}
-{% block page_content %}{% endblock page_content %}
 
 
-{% block content %}
+{% endblock page_title %}
+
+
+{% block page_content %}
+
+
+
+
 <h1>Search Results</h1>
 <ul>
     {% for category in categories %}
@@ -23,8 +37,15 @@
         <li>No categories found.</li>
     {% endfor %}
 </ul>
-{% endblock content %}
 
+
+{% endblock page_content %}
+
+<p class="m-0 text-center text-white">
+    {% block copyright %}
+        Made by Christina Åhman
+    {% endblock copyright %}
+</p>
 
 </body>
 </html>
