--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -5,7 +5,7 @@ This template view listing all posts -->
 {% extends "base.html" %}
 
 {% block page_title%}
-    <h2>Blog Posts</h2>
+    <h2>Mindful Growth</h2>
 {% endblock page_title %}    
 
 {% block page_content %}
@@ -25,6 +25,8 @@ This template view listing all posts -->
     {% endblock posts %}
 {% endblock page_content %}
 
+<footer>
 {% block copyright %}
     Copyright 2024 Christina Åhman
 {% endblock %}
+</footer>
