--- a/templates/base.html
+++ b/templates/base.html
@@ -41,11 +41,12 @@
 
 {% endblock page_content %}
 
+<footer>
 <p class="m-0 text-center text-white">
     {% block copyright %}
         Made by Christina Åhman
     {% endblock copyright %}
 </p>
-
+</footer>
 </body>
 </html>
