--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -25,6 +25,23 @@ This template view listing all posts -->
     {% endblock posts %}
 {% endblock page_content %}
 
+<a href="{% url 'post' post.slug %}" class="post-link"></a>
+
+<ul class="pagination justify-content-center">
+    {% if page_obj.has_previous %}
+    <li>
+        <a href="?page={{ page_obj.previous_page_number }}"
+          class="page-link">&laquo; PREV</a>
+    </li>
+    {% endif %}
+    {% if page_obj.has_next %}
+    <li>
+        <a href="?page={{ page_obj.next_page_number }}"
+          class="page-link">NEXT &raquo;</a>
+    </li>
+    {% endif %}
+</ul>
+
 <footer>
 {% block copyright %}
     Copyright 2024 Christina Åhman
