--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mindful Growth</title>
 
+      <!-- MDB CSS -->
+      <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}">
+      <script src="{% static 'js/mdb.umd.min.js' %}"></script>
     <!-- Custom CSS-->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
@@ -48,5 +52,7 @@
     {% endblock copyright %}
 </p>
 </footer>
+
+ <!-- MDB JS -->
 </body>
 </html>
