--- a/templates/base.html
+++ b/templates/base.html
@@ -15,18 +15,13 @@
    
     <!-- Custom CSS-->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+    <!-- Icons for Social Media-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
 
-    {% block page_title %}
-
-<h1>Mindful Growth</h1>
-<a href="{% url "blog_index" %}">Home</a>
-<hr>
-
-
-{% endblock page_title %}
-
+  
 
 {% block page_content %}
 
@@ -86,7 +81,7 @@
       <div class="container-fluid">
         <!-- Navbar brand -->
         <a class="navbar-brand nav-link" target="_blank" href="">
-          <strong>MDB</strong>
+          <strong>Mindful Growth</strong>
         </a>
         <button class="navbar-toggler" type="button" data-mdb-collapse-init data-mdb-target="#navbarExample01" aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fas fa-bars"></i>
@@ -97,34 +92,24 @@
               <a class="nav-link" aria-current="page" href="">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="" rel="nofollow" target="_blank">Read about self development</a>
+              <a class="nav-link" href="" rel="nofollow" target="_blank">Courses</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="" target="_blank">Want to invest in yourself?</a>
+              <a class="nav-link" href="" target="_blank">Blog</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="" target="_blank">Contact</a>
             </li>
           </ul>
   
           <ul class="navbar-nav d-flex flex-row">
-            <!-- Icons -->
-            <li class="nav-item me-3 me-lg-0">
-              <a class="nav-link" href="" rel="nofollow" target="_blank">
-                <i class="fab fa-linkedin"></i>
-              </a>
-            </li>
-            <li class="nav-item me-3 me-lg-0">
-              <a class="nav-link" href="" rel="nofollow" target="_blank">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-            </li>
-            <li class="nav-item me-3 me-lg-0">
-              <a class="nav-link" href="" rel="nofollow" target="_blank">
-                <i class="fab fa-instagram"></i>
-              </a>
-            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-    <!-- Navbar -->
+        
+          </nav>
+           
+   
   
     <!-- Carousel wrapper -->
     <div id="introCarousel" class="carousel slide carousel-fade shadow-2-strong" data-mdb-carousel-init>
@@ -296,90 +281,9 @@
           </div>
         </div>
       </section> -->
-
-
-      
-      <!--Section: Content-->
-  
-      <hr class="my-5" />
-  
-      <!--Section: Content-->
-      <section class="mb-5">
-        <h4 class="mb-5 text-center"><strong>Facilis consequatur eligendi</strong></h4>
-  
-        <div class="row d-flex justify-content-center">
-          <div class="col-md-6">
-            <form>
-              <!-- 2 column grid layout with text inputs for the first and last names -->
-              <div class="row mb-4">
-                <div class="col">
-                  <div class="form-outline" data-mdb-input-init>
-                    <input type="text" id="form3Example1" class="form-control" />
-                    <label class="form-label" for="form3Example1">First name</label>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="form-outline" data-mdb-input-init>
-                    <input type="text" id="form3Example2" class="form-control" />
-                    <label class="form-label" for="form3Example2">Last name</label>
-                  </div>
-                </div>
-              </div>
-  
-              <!-- Email input -->
-              <div class="form-outline mb-4" data-mdb-input-init>
-                <input type="email" id="form3Example3" class="form-control" />
-                <label class="form-label" for="form3Example3">Email address</label>
-              </div>
-  
-              <!-- Password input -->
-              <div class="form-outline mb-4" data-mdb-input-init>
-                <input type="password" id="form3Example4" class="form-control" />
-                <label class="form-label" for="form3Example4">Password</label>
-              </div>
-  
-              <!-- Checkbox -->
-              <div class="form-check d-flex justify-content-center mb-4">
-                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" checked />
-                <label class="form-check-label" for="form2Example3">
-                  Subscribe to our newsletter
-                </label>
-              </div>
-  
-              <!-- Submit button -->
-              <button type="submit" class="btn btn-primary btn-block mb-4" data-mdb-ripple-init>
-                Sign up
-              </button>
-  
-              <!-- Register buttons -->
-              <div class="text-center">
-                <p>or sign up with:</p>
-                <button type="button" class="btn btn-primary btn-floating mx-1" data-mdb-ripple-init>
-                  <i class="fab fa-facebook-f"></i>
-                </button>
-  
-                <button type="button" class="btn btn-primary btn-floating mx-1" data-mdb-ripple-init>
-                  <i class="fab fa-google"></i>
-                </button>
-  
-                <button type="button" class="btn btn-primary btn-floating mx-1" data-mdb-ripple-init>
-                  <i class="fab fa-twitter"></i>
-                </button>
-  
-                <button type="button" class="btn btn-primary btn-floating mx-1" data-mdb-ripple-init>
-                  <i class="fab fa-github"></i>
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </section>
-      <!--Section: Content-->
-    </div>
-  </main>
-  <!--Main layout-->
-  
+ 
   <!--Footer-->
+  <footer> 
   <footer class="bg-light text-lg-start">
     <div class="py-4 text-center">
       <a role="button" class="btn btn-primary btn-lg m-2" data-mdb-ripple-init href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" rel="nofollow" target="_blank">
@@ -393,24 +297,23 @@
     <hr class="m-0" />
   
     <div class="text-center py-4 align-items-center">
-      <p>Follow MDB on social media</p>
-      <a href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" class="btn btn-primary m-1" data-mdb-ripple-init role="button" rel="nofollow" target="_blank">
-        <i class="fab fa-youtube"></i>
+      <p>Mindful Growth on social media</p>
+      <a href="https://www.linkedin.com/in/christina-%C3%A5hman-2115101b2/" class="btn btn-primary m-1" data-mdb-ripple-init role="button" rel="nofollow" target="_blank">
+        <i class="fab fa-linkedin"></i>
       </a>
-      <a href="https://www.facebook.com/mdbootstrap" class="btn btn-primary m-1" data-mdb-ripple-init role="button" rel="nofollow" target="_blank">
+      <a href="https://www.facebook.com/christina.ahman.5" class="btn btn-primary m-1" data-mdb-ripple-init role="button" rel="nofollow" target="_blank">
         <i class="fab fa-facebook-f"></i>
       </a>
-      <a href="https://twitter.com/MDBootstrap" class="btn btn-primary m-1" role="button" rel="nofollow" target="_blank">
-        <i class="fab fa-twitter"></i>
+      <a href="https://www.instagram.com/chrahm/" class="btn btn-primary m-1" role="button" rel="nofollow" target="_blank">
+        <i class="fab fa-instagram"></i>
       </a>
-      <a href="https://github.com/mdbootstrap/mdb-ui-kit" class="btn btn-primary m-1" data-mdb-ripple-init role="button" rel="nofollow" target="_blank">
-        <i class="fab fa-github"></i>
-      </a>
+      
     </div>
   
 
 
-<h1>Search Results</h1>
+<!--
+    <h1>Search Results</h1>
 <ul>
     {% for category in categories %}
         <li>{{ category.name }}</li>
@@ -421,20 +324,36 @@
 
 
 {% endblock page_content %}
+-->
 
-<footer>
+
+   <!-- Icons 
+    <ul> 
+   <li class="nav-item me-3 me-lg-0">
+    <a class="nav-link" href="https://www.linkedin.com/in/christina-%C3%A5hman-2115101b2/" rel="nofollow" target="_blank">
+     
+    </a>
+  </li>
+  <li class="nav-item me-3 me-lg-0">
+    <a class="nav-link" href="https://www.facebook.com/christina.ahman.5" rel="nofollow" target="_blank">
+     
+    </a>
+  </li>
+  <li class="nav-item me-3 me-lg-0">
+    <a class="nav-link" href="https://www.instagram.com/chrahm/" rel="nofollow" target="_blank">
+      <i class="fab fa-instagram"></i>
+    </a>
+    </li>
+  </ul>
+  </div>
+</div>
+-->
     
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         © 2020 Copyright:
-        <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-      </div>
+        <a class="text-dark" href="https://mdbootstrap.com/">Mindful Growth by Christina Åhman</a>
 
-<p class="m-0 text-center text-white">
-    {% block copyright %}
-        Made by Christina Åhman
-    {% endblock copyright %}
-</p>
 </footer>
 
  <!-- MDB JS -->
