problemsolving for author user

--- a/blog/templates/blog/contact.html
+++ b/blog/templates/blog/contact.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block_page content %}
 
 
       <!--Sign Up Form-->
@@ -81,5 +81,4 @@
       <!--Section: Content-->
     </div>
   </main>
-
-{% endblock %}
+  {% endblock page_content %}
