--- a/blog/templates/blog/courses.html
+++ b/blog/templates/blog/courses.html
@@ -1,5 +1,112 @@
 {% extends "base.html" %}
 
-{% block content %}
 
-{% endblock %}
+
+    <!-- Section: My projects -->
+    <section class="mb-10 text-center">
+        <h2 class="fw-bold mb-7 text-center">My projects</h2>
+  
+        <div class="row gx-lg-5">
+  
+          <!-- First column -->
+          <div class="col-lg-4 col-md-12 mb-6 mb-lg-0">
+  
+            <div class="card rounded-6 h-100">
+              <div class="mt-n3 bg-image hover-overlay mx-3 shadow-4-strong rounded-6" data-mdb-ripple-init
+                   data-mdb-ripple-color="light">
+                <img src="https://mdbootstrap.com/img/new/textures/small/148.jpg" class="img-fluid" />
+                <a href="#!">
+                  <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">AI engine</h5>
+                <p class="text-muted">
+                  <small>Finished <u>13.09.2021</u> for
+                    <a href="" class="text-dark">Techify</a></small>
+                </p>
+                <p class="card-text">
+
+                  {% block content %}
+
+                  Ut pretium ultricies dignissim. Sed sit amet mi eget urna
+                  placerat vulputate. Ut vulputate est non quam dignissim
+                  elementum. Donec a ullamcorper diam.
+
+                  {% endblock Content %}
+
+                </p>
+                <a href="#!" class="btn btn-secondary btn-rounded" data-mdb-ripple-init>Read more</a>
+              </div>
+            </div>
+  
+          </div>
+          <!-- First column -->
+  
+          <!-- Second column -->
+          <div class="col-lg-4 mb-6 mb-lg-0">
+  
+            <div class="card rounded-6 h-100">
+              <div class="mt-n3 bg-image hover-overlay mx-3 shadow-4-strong rounded-6" data-mdb-ripple-init
+                   data-mdb-ripple-color="light">
+                <img src="https://mdbootstrap.com/img/new/textures/small/38.jpg" class="img-fluid" />
+                <a href="#!">
+                  <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Balanced design</h5>
+                <p class="text-muted">
+                  <small>Finished <u>12.01.2022</u> for
+                    <a href="" class="text-dark">Rubicon</a></small>
+                </p>
+                <p class="card-text">
+                  Suspendisse in volutpat massa. Nulla facilisi. Sed aliquet
+                  diam orci, nec ornare metus semper sed. Integer volutpat
+                  ornare erat sit amet rutrum. Ut vulputate est non quam.
+                </p>
+                <a href="#!" class="btn btn-secondary btn-rounded" data-mdb-ripple-init>Read more</a>
+              </div>
+            </div>
+  
+          </div>
+          <!-- Second column -->
+  
+          <!-- Third column -->
+          <div class="col-lg-4 mb-6 mb-lg-0">
+  
+            <div class="card rounded-6 h-100">
+              <div class="mt-n3 bg-image hover-overlay mx-3 shadow-4-strong rounded-6" data-mdb-ripple-init
+                   data-mdb-ripple-color="light">
+                <img src="https://mdbootstrap.com/img/new/textures/small/55.jpg" class="img-fluid" />
+                <a href="#!">
+                  <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Metaverse 2.0</h5>
+                <p class="text-muted">
+                  <small>Finished <u>10.11.2022</u> for
+                    <a href="" class="text-dark">Venom Tech</a></small>
+                </p>
+                <p class="card-text">
+                  Curabitur tristique, mi a mollis sagittis, metus felis mattis
+                  arcu, non vehicula nisl dui quis diam. Mauris ut risus eget
+                  massa volutpat feugiat. Donec.
+                </p>
+                <a href="#!" class="btn btn-secondary btn-rounded" data-mdb-ripple-init>Read more</a>
+              </div>
+            </div>
+  
+          </div>
+          <!-- Third column -->
+  
+        </div>
+  
+      </section>
+      <!-- Section: My projects -->
+  
+    </div>
+  </main>
+  <!--Main layout-->
+
