--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,8 @@
 
  {% load static %}
 
+    
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,10 +25,12 @@
 
   
 
-{% block page_content %}
+
+
 
 <!--Main Navigation-->
 <header>
+  {% block header %}
     <style>
       /* Carousel styling */
       #introCarousel,
@@ -75,7 +79,7 @@
         color: #fff !important;
       }
     </style>
-  
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark d-none d-lg-block" style="z-index: 2000;">
       <div class="container-fluid">
@@ -107,9 +111,7 @@
           </div>
         </div>
         
-          </nav>
-           
-   
+          </nav>         
   
     <!-- Carousel wrapper -->
     <div id="introCarousel" class="carousel slide carousel-fade shadow-2-strong" data-mdb-carousel-init>
@@ -135,7 +137,7 @@
             </div>
           </div>
         </div>
-  
+       
         <!-- Single item -->
         <div class="carousel-item">
           <div class="mask" style="background-color: rgba(0, 0, 0, 0.3);">
@@ -178,22 +180,17 @@
       </a>
     </div>
     <!-- Carousel wrapper -->
+    {% endblock %}
   </header>
   <!--Main Navigation-->
+ 
   
-  
+  {% block page_content %}     
  
   <!--Footer-->
   <footer> 
   <footer class="bg-light text-lg-start">
-    <div class="py-4 text-center">
-      <a role="button" class="btn btn-primary btn-lg m-2" data-mdb-ripple-init href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" rel="nofollow" target="_blank">
-        Learn Bootstrap 5
-      </a>
-      <a role="button" class="btn btn-primary btn-lg m-2" data-mdb-ripple-init href="https://mdbootstrap.com/docs/standard/" target="_blank">
-        Download MDB UI KIT
-      </a>
-    </div>
+    
   
     <hr class="m-0" />
   
@@ -224,7 +221,6 @@
 </ul>
 -->
 
-{% endblock page_content %}
 
 
 
@@ -239,4 +235,6 @@
  <script src="{% static 'js/mdb.umd.min.js' %}"></script>
  
 </body>
+{% endblock %}
+
 </html>
