--- a/templates/base.html
+++ b/templates/base.html
@@ -84,7 +84,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark d-none d-lg-block" style="z-index: 2000;">
       <div class="container-fluid">
         <!-- Navbar brand -->
-        <a class="navbar-brand nav-link" target="_blank" href="">
+        <a class="navbar-brand nav-link" target="_blank" href="{% url 'home' %}">
           <strong>Mindful Growth</strong>
         </a>
         <button class="navbar-toggler" type="button" data-mdb-collapse-init data-mdb-target="#navbarExample01" aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
@@ -93,17 +93,17 @@
         <div class="collapse navbar-collapse" id="navbarExample01">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="">Home</a>
+              <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="" rel="nofollow" target="_blank">Courses</a>
+              <a class="nav-link" href="{% url 'courses' %}" rel="nofollow" target="_blank">Courses</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="" target="_blank">Blog</a>
+              <a class="nav-link" href="{% url 'blog_list' %}" target="_blank">Blog</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="" target="_blank">Contact</a>
+              <a class="nav-link" href="{% url 'contact' %}" target="_blank">Contact</a>
             </li>
           </ul>
   
@@ -180,12 +180,18 @@
       </a>
     </div>
     <!-- Carousel wrapper -->
+  
     {% endblock %}
   </header>
   <!--Main Navigation-->
  
-  
-  {% block page_content %}     
+  <!-- Main Content -->
+<main>
+  {% block content %}
+  {% endblock %}
+</main>
+<!-- Main Content -->
+   
  
   <!--Footer-->
   <footer> 
@@ -235,6 +241,5 @@
  <script src="{% static 'js/mdb.umd.min.js' %}"></script>
  
 </body>
-{% endblock %}
 
 </html>
